src/main/javacc/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package edu.lmu.cs.xlg.manatee.syntax;

import java.util.List;
import java.util.ArrayList;
import java.io.Reader;
import edu.lmu.cs.xlg.util.Log;
import edu.lmu.cs.xlg.manatee.entities.*;

public class Parser implements ParserConstants {

    /**
     * Returns the result of parsing the Manatee program on the given Reader.
     */
    public Script parse(Log log) {
        try {
            return SCRIPT();
        } catch (TokenMgrError e) {
            log.exception(e);
            return null;
        } catch (ParseException e) {
            log.exception(e);
            return null;
        }
    }

// -------------------
// SCRIPT ->  (STMT BR)+
// -------------------
  final public Script SCRIPT() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    s = STMT();
                 statements.add(s);
    jj_consume_token(BR);
    jj_consume_token(0);
     {if (true) return new Script(statements);}
    throw new Error("Missing return statement in function");
  }

  final public Arguments ARGS() throws ParseException {
        List<Expression > arguments = new ArrayList<Expression >();
        Expression e;
        Expression e1;
    jj_consume_token(36);
    e = EXP();
            arguments.add(e);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
      case 36:
      case NUMLIT:
      case STRLIT:
      case ID:
      case BOOL:
      case 57:
      case 58:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      e1 = EXP();
      jj_consume_token(24);
              arguments.add(e1);
    }
    jj_consume_token(37);
            {if (true) return new Arguments(arguments);} //needs a Java file

    throw new Error("Missing return statement in function");
  }

// ---------------------------------------------------------------------
// STMT -> 	    |  DEC
//              |  ASSIGNMENT
//              |  PRINTSTMT
//              |  CONDITIONAL
//              |  LOOP
//              |  EXP
//              |  RETURNSTMT
// ---------------------------------------------------------------------
  final public Statement STMT() throws ParseException {
    Statement s;
    ModifiedStatement.Modifier m = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
    case ID:
      s = DEC();
      break;
      s = ASSIGNMENT();
      break;
    case 49:
      s = PRINTSTMT();
      break;
    case 4:
      s = CONDITIONAL();
      break;
    case 20:
    case 21:
    case 22:
      s = LOOP();
      break;
    case 26:
    case 36:
    case NUMLIT:
    case STRLIT:
    case BOOL:
    case 57:
    case 58:
      s = EXP();
      break;
    case 10:
      s = RETURNSTMT();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

//----------------------------------
// ASSIGNMENT    - >  ID '=' EXP
//----------------------------------
  final public AssignmentStatement ASSIGNMENT() throws ParseException {
  Expression target;
  Expression source;
    target = jj_consume_token(ID);
    jj_consume_token(33);
    source = EXP();
      {if (true) return new AssignmentStatement(target, source);}
    throw new Error("Missing return statement in function");
  }

  final public PrintStatement PRINTSTMT() throws ParseException {
   Expression exp;
    jj_consume_token(49);
    exp = EXP();
   {if (true) return new PrintStatement(exp);} //needs a Java file

    throw new Error("Missing return statement in function");
  }

  final public ReturnStatement RETURNSTMT() throws ParseException {
   Expression exp;
    jj_consume_token(10);
    exp = EXP();
   {if (true) return new ReturnStatement(exp);} //needs a Java file

    throw new Error("Missing return statement in function");
  }

// ---------------------------------
// DEC -> VARDEC | FUNCDEC
// ---------------------------------
  final public Statement DEC() throws ParseException {
    Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      s = VARDEC();
      break;
    case 7:
      s = FUNDEC();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

// --------------------------------
// VARDEC -> TYPE ID '=' EXP
// --------------------------------
  final public Variable VARDEC() throws ParseException {
    String i = null;
    String t = null;
    Token v = null;
    Expression e = null;
    boolean constant = false;
    v = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 26:
    case 36:
    case NUMLIT:
    case STRLIT:
    case ID:
    case BOOL:
    case 50:
    case 57:
    case 58:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        jj_consume_token(50);
              constant = true;
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      e = EXP();
      break;
    case 11:
    case 12:
    case 13:
    case 14:
    case 15:
    case 16:
    case 38:
      t = TYPE();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Variable(v.image, t, e, constant);}
    throw new Error("Missing return statement in function");
  }

// ---------------------
// TYPE -> truth value
//     |  character
//     |  whole? number
//     |  string
//     |  TYPE list
// ---------------------
  final public String TYPE() throws ParseException {
    String t;
    Token tok;
    StringBuilder builder = new StringBuilder();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
             t = "boolean";
      break;
    case 14:
      jj_consume_token(14);
             t = "character";
      break;
    case 13:
      jj_consume_token(13);
             t = "String";
      break;
    case 15:
      jj_consume_token(15);
             t = "any";
      break;
    case 12:
      jj_consume_token(12);
             t = "number";
      break;
    case ID:
      jj_consume_token(ID);
                  t = "object";
      break;
    case 16:
      jj_consume_token(16);
                  t = "null";
      break;
    case 38:
      jj_consume_token(38);
      TYPE();
      jj_consume_token(39);
                  t = "array";
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     builder.append(t);
     {if (true) return builder.toString();}
    throw new Error("Missing return statement in function");
  }

// Do we need to remove the following commented code? - TM

// ----------------------------------
// PROCDEC -> to ID PARAMS? BLOCK end
// ----------------------------------
/*
Procedure PROCDEC(): {
    Token name;
    List<Variable> params = new ArrayList<Variable>();
    Block body;
}{
    "to" name = <ID> (PARAMS(params))? body = BLOCK() "end"
    {return new Procedure(name.image, params, body);}
}
*/

// ----------------------------------------------------------------------
// FUNDEC -> 'DF' ID ARGS BR BLOCK
// ----------------------------------------------------------------------
  final public Function FUNDEC() throws ParseException {
    String type;
    Token name;
    List<Variable> params = new ArrayList<Variable>();
    Block body;
    jj_consume_token(7);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 36:
      ARGS();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    body = BLOCK();
     {if (true) return new Function(type, name.image, params, body);}
    throw new Error("Missing return statement in function");
  }

// ----------------------------------------------------
// PARAMS -> '(' ID (ID ',')* ')'
// ----------------------------------------------------
  final public void PARAMS(List<Variable> params) throws ParseException {
    String t;
    Token p;
    jj_consume_token(36);
    p = jj_consume_token(ID);
      params.add(new Variable(p));
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      p = jj_consume_token(ID);
      jj_consume_token(24);
        params.add(new Variable(p));
    }
    jj_consume_token(37);
  }

// ----------------------
// BLOCK -> (BR STMT)+
// ----------------------
  final public Block BLOCK() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    jj_consume_token(23);
    label_3:
    while (true) {
      jj_consume_token(BR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
    }
    label_4:
    while (true) {
      s = STMT();
                              statements.add(s);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 4:
      case 7:
      case 10:
      case 20:
      case 21:
      case 22:
      case 26:
      case 36:
      case NUMLIT:
      case STRLIT:
      case ID:
      case BOOL:
      case 49:
      case 57:
      case 58:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
    }
     {if (true) return new Block(statements);}
    throw new Error("Missing return statement in function");
  }

// ------------------------------------------------------------------
// CONDITIONAL -> 'I' EXP BLOCK ('EF' EXP BLOCK)* ('E' BLOCK)?
// ------------------------------------------------------------------
  final public Statement CONDITIONAL() throws ParseException {
    ConditionalStatement.Arm arm;
    List<ConditionalStatement.Arm> arms = new ArrayList<ConditionalStatement.Arm>();
    Expression e;
    Block b;
    Block elseBlock = null;
    jj_consume_token(4);
    e = EXP();
    b = BLOCK();
     arms.add(new ConditionalStatement.Arm(e, b));
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(51);
      jj_consume_token(5);
      e = EXP();
      b = BLOCK();
         arms.add(new ConditionalStatement.Arm(e, b));
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 6:
      jj_consume_token(6);
      elseBlock = BLOCK();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
     {if (true) return new ConditionalStatement(arms, elseBlock);}
    throw new Error("Missing return statement in function");
  }

// -----------------------------------------------------
// LOOP        -> LOOPCONTROL BLOCK end
// LOOPCONTROL -> loop (EXP times)?
//             |  while EXP
//             |  for each ID in EXP (to EXP (by EXP)?)?
// -----------------------------------------------------
//needs more work
  final public Statement LOOP() throws ParseException {
    Token t = null;
    Expression e = null;
    Expression e2 = null;
    Expression e3 = null;
    Block b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 20:
      jj_consume_token(20);
      e = EXP();
      jj_consume_token(BR);
      b = BLOCK();
         {if (true) return e == null ? new PlainLoop(b) : new TimesLoop(e, b);}
      break;
    case 22:
      jj_consume_token(22);
      e = EXP();
      b = BLOCK();
         {if (true) return new WhileLoop(e, b);}
      break;
    case 21:
      jj_consume_token(21);
      t = jj_consume_token(ID);
      e = EXP();
      e2 = EXP();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
      case 36:
      case NUMLIT:
      case STRLIT:
      case ID:
      case BOOL:
      case 57:
      case 58:
        e3 = EXP();
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(BR);
      BLOCK();
      //???
              b = BLOCK();
            if (e3 == null) {
                {if (true) return new CollectionLoop(t.image, e,e2, b);} //looping through objects
            } else {
                {if (true) return new RangeLoop(t.image, e, e2, e3, b);} //regular for loop
            }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// ----------------------
// EXP -> EXP1 (or EXP1)*
// ----------------------
  final public Expression EXP() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = EXP1();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      jj_consume_token(52);
      e2 = EXP1();
                       e1 = new BinaryExpression(e1, "||", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ------------------------
// EXP1 -> EXP2 (and EXP2)*
// ------------------------
  final public Expression EXP1() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = EXP2();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      jj_consume_token(53);
      e2 = EXP2();
                       e1 = new BinaryExpression(e1, "and", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// --------------------------
// EXP2 -> EXP3 (RELOP EXP3)?
// --------------------------
  final public Expression EXP2() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = EXP3();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 29:
    case 31:
    case 32:
    case 34:
    case 35:
    case 54:
      op = RELOP();
      e2 = EXP3();
         e1 = new BinaryExpression(e1, op, e2);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ----------------------------
// EXP3 -> EXP4 (ADDOP EXP4)?
// ----------------------------
  final public Expression EXP3() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = EXP4();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
    case 26:
      op = ADDOP();
      e2 = EXP4();
         e1 = new BinaryExpression(e1, op, e2);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// --------------------------
// EXP4 -> EXP5 (MULOP EXP5)*
// --------------------------
  final public Expression EXP4() throws ParseException {
    String op;
    Expression e1;
    e1 = EXP5();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 27:
      case 28:
      case 30:
      case 55:
      case 56:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      op = MULOP();
      e2 = EXP5();
         e1 = new BinaryExpression(e1, op, e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// --------------------------
// EXP5 -> PREFIXOP? EXP6
// --------------------------
  final public Expression EXP5() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 26:
    case 57:
    case 58:
      op = PREFIXOP();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    e = EXP6();
     {if (true) return op == null ? e : new UnaryExpression(op, e);}
    throw new Error("Missing return statement in function");
  }

// -------------------------
// EXP6 -> BOOL | NUMLIT | STRLIT | ID | '(' EXP ')' | EXP '[' EXP ']' | ID ARGS
// -------------------------
  final public Expression EXP6() throws ParseException {
    List<Expression> expressions = new ArrayList<Expression>();
    Expression e = null;
    Expression e2 = null;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMLIT:
    case STRLIT:
    case ID:
    case BOOL:
      e = EXP7();
         {if (true) return e;}
      break;
      t = jj_consume_token(ID);
         {if (true) return new IdentifierExpression(t.image);}
      break;
      e2 = EXP7();
      jj_consume_token(38);
      e = EXP7();
      jj_consume_token(39);
         {if (true) return new ArrayConstructor(expressions);}
      break;
    case 36:
      jj_consume_token(36);
      e = EXP7();
      jj_consume_token(37);
         {if (true) return e;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression EXP7() throws ParseException {
        Expression e2 = null;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      e = jj_consume_token(BOOL);
         {if (true) return e;}
      break;
    case NUMLIT:
      e = jj_consume_token(NUMLIT);
         {if (true) return e;}
      break;
    case STRLIT:
      e = jj_consume_token(STRLIT);
         {if (true) return e;}
      break;
    case ID:
      t = jj_consume_token(ID);
         {if (true) return new IdentifierExpression(t.image);}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Do the following comments need to be deleted since it isn't in our language? - TM

/*// ------------------
// LITERAL -> nothing
//         |  yes
//         |  no
//         |  INTLIT
//         |  NUMLIT
//         |  CHARLIT
//         |  STRLIT
// ------------------

Literal LITERAL(): {
    Token t;
}{
    "<>" {return NullLiteral.INSTANCE;}
|
    "T" {return BooleanLiteral.TRUE;}
|
    "F" {return BooleanLiteral.FALSE;}
|
    t = <INTLIT> {return new WholeNumberLiteral(t.image);}
|
    t = <NUMLIT> {return new NumberLiteral(t.image);}
|
    t = <CHARLIT> {return new CharacterLiteral(t.image);}
|
    t = <STRLIT> {return new StringLiteral(t.image);}
}

// -------------------------
// EXPLIST -> EXP (',' EXP)*
// -------------------------

List<Expression> EXPLIST(): {
    List<Expression> expressions = new ArrayList<Expression>();
    Expression e;
}{
    e = EXP() {expressions.add(e);}
    ("," e = EXP() {expressions.add(e);})*
    {return expressions;}
}
*/

// ------------------------------------------------------
// RELOP -> '<' | '<=' | '==' | '!=' | '>=' | '>' |
// ------------------------------------------------------
  final public String RELOP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 31:
      jj_consume_token(31);
         {if (true) return "<";}
      break;
    case 32:
      jj_consume_token(32);
          {if (true) return "<=";}
      break;
    case 29:
      jj_consume_token(29);
          {if (true) return "==";}
      break;
    case 54:
      jj_consume_token(54);
          {if (true) return "!=";}
      break;
    case 34:
      jj_consume_token(34);
          {if (true) return ">=";}
      break;
    case 35:
      jj_consume_token(35);
         {if (true) return ">";}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
